--- a/css/mydev.css
+++ b/css/mydev.css
@@ -14,7 +14,12 @@ h1,h3,h2{
   	text-align: center;
   }
 
+ div> h6{
+     padding: 5%;
+    color: #051525;
+  }
   #center_div{
+    background-color: rgba(84, 86, 88, 0.377);
     box-shadow: 0 4px 8px 0 rgba(252, 251, 251, 0.836), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
@@ -43,7 +48,7 @@ h1,h3,h2{
      }  
 
      label{
-         color: rgb(255, 254, 254);
+         color: #051525;
      }   
      
 #container_fluid{
@@ -53,8 +58,8 @@ h1,h3,h2{
     border-bottom: 10px solid #f8f9fa;
           }
 
-          .container{
-              background-color: rgb(0, 36, 68);
+          #container{
+             background-image: url('/imgs/bg_images.jpg')
           }
  .title{
 	 width:100%;
@@ -95,7 +100,7 @@ h1,h3,h2{
 .footer{
 	 width:100%;
      height: 0 auto; 
-     background-color: #15305b;
+     background-color: #051525;
      float:left;
      margin-top: 3px;
      border-top: 5px solid #0f88ff;
