--- a/css/mydev.css
+++ b/css/mydev.css
@@ -1,26 +1,28 @@
 
-.banner{
+header{
 	width: 100%;
-	height: 450px;
+  height: 90px;
+  opacity: 0.75;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #c1c3c5;
 	margin-top: 10px; 
-    padding-bottom: 3px;
+    padding: 0 3 3 3px;
+    color:#101329;
+    border-bottom: 2px solid #15305b;
+    box-shadow: 0 4px 8px 0 rgba(252, 251, 251, 0.836), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 h1,h3,h2{
 	color:#ffffff;
-	text-align: left;
+	text-align: center;
 	font-size: 20pt;
   }
   p{
-  	text-align: center;
+    text-align: center;
   }
 
  div> h6{
      padding: 5%;
     color: #051525;
-  }
-  #center_div{
-    background-color: rgba(84, 86, 88, 0.377);
-    box-shadow: 0 4px 8px 0 rgba(252, 251, 251, 0.836), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .total{
@@ -32,11 +34,7 @@ h1,h3,h2{
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(252, 251, 251, 0.836), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-#tagline{
-	text-align: left;
-	font-family: tahoma;
-	padding-bottom: 9px;
-       }
+
   form{
   	padding-left: 5px;
   }
@@ -50,20 +48,21 @@ h1,h3,h2{
      label{
          color: #051525;
      }   
-     
-#container_fluid{
-	width:100%;
-    height: 0 auto; 
-    background-color: #051525;
-    border-bottom: 10px solid #f8f9fa;
+   #container-fluid_bg{
+             background: url('/imgs/bg_images.jpg');
+             background-repeat: no-repeat;
+             background-size:  cover;
+             background-color: rgba(5, 12, 19, 0.377);
           }
-
-          #container{
-             background-image: url('/imgs/bg_images.jpg')
-          }
- .title{
-	 width:100%;
+    #currency{
+     opacity: 0.75;
+     margin-top: 2%;
+     margin-bottom: 2%;
       height: 0 auto;
+      background-color: #c1c3c5;
+      /*  */
+
+      box-shadow: 0 4px 8px 0 rgba(37, 37, 37, 0.836), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }                        
 
                  
@@ -88,6 +87,8 @@ h1,h3,h2{
 
       #btnConvert{
         text-align: center;
+        font-size: 30px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin-bottom: 30px;
         width: 100%;
         height: 10%;
